[package]

name = "epwing"
version = "0.0.1"
authors = ["Mikko Perttunen <cyndis@kapsi.fi>"]

[dependencies.jis0208]
git = "git://github.com/cyndis/jis0208"

[dependencies.unicode_hfwidth]
git = "git://github.com/cyndis/unicode_hfwidth"

[[example]]
name = "show_contents"
path = "examples/show_contents/main.rs"
